--- a/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj
+++ b/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj
@@ -161,12 +161,14 @@
     <ClInclude Include="Enum.h" />
     <ClInclude Include="Objects.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="CSceneMgr.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFactory.cpp" />
     <ClCompile Include="CObject.cpp" />
+    <ClCompile Include="CSceneMgr.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SimpleGame.cpp" />
     <ClCompile Include="stdafx.cpp">
