--- a/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
+++ b/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="LoadPng.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CImageMgr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\SolidRect.fs">
