--- a/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
+++ b/Practice/SimpleGame/SimpleGame/SimpleGame.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="CImageMgr.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Sound.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CImageMgr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Sound.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
